fix: Cumulative Layout Shift対策

--- a/src/components/Article/style.module.scss
+++ b/src/components/Article/style.module.scss
@@ -248,7 +248,7 @@
         }
 
         & > img {
-          max-inline-size: max-content;
+          background-color: var(--gjGray2);
         }
       }
 
